--- a/index.html
+++ b/index.html
@@ -1,17 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Your Name</title>
-  <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>aryan's hub</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <h1>Hello, I'm Your Name 👋</h1>
-    <p>Welcome to my personal landing page.</p>
-    <button onclick="sayHi()">Click Me</button>
-  </div>
-  <script src="script.js"></script>
+    <div class="container-fluid">
+        <div class="row">
+            <!-- Left Navigation -->
+            <nav class="col-md-3 col-lg-2 d-md-block sidebar">
+                <div class="position-sticky pt-5">
+                    <h1 class="site-title">aryan</h1>
+                    <ul class="nav flex-column">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#essays">essays</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#about">about me</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#life">life atm</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#gallery">image gallery</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+
+            <!-- Main Content -->
+            <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+                <!-- Essays Section -->
+                <div id="essays-section" class="content-section active">
+                    <h2>Essays</h2>
+                    <div class="essay-list">
+                        <!-- Add your essays here -->
+                        <div class="essay-item">
+                            <h3>Essay Title 2</h3>
+                            <div class="essay-date">March 2024</div>
+                            <p>Your essay content goes here...</p>
+                        </div>
+                        <div class="essay-item">
+                          <h3>Essay Title 1</h3>
+                          <div class="essay-date">March 2024</div>
+                          <p>Your essay content goes here...</p>
+                      </div>
+                    </div>
+                </div>
+
+                <!-- About Section -->
+                <div id="about-section" class="content-section">
+                    <h2>About Me</h2>
+                    <p>Your biography and personal information goes here...</p>
+                </div>
+
+                <!-- Life ATM Section -->
+                <div id="life-section" class="content-section">
+                    <h2>Current Focus</h2>
+                    <p>What you're currently working on...</p>
+                </div>
+
+                <!-- Gallery Section -->
+                <div id="gallery-section" class="content-section">
+                    <h2>Image Gallery</h2>
+                    <div class="row gallery-grid">
+                        <!-- Add your images here -->
+                        <div class="col-md-4 mb-4">
+                            <img src="placeholder.jpg" class="img-fluid" alt="Gallery image">
+                        </div>
+                    </div>
+                </div>
+            </main>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
