effects plus bounce test

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>aryan's hub</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -14,19 +15,30 @@
             <!-- Left Navigation -->
             <nav class="col-md-3 col-lg-2 d-md-block sidebar">
                 <div class="position-sticky pt-5">
-                    <h1 class="site-title">aryan</h1>
+
+                    <h1>aryan</h1>
+
+
                     <ul class="nav flex-column">
                         <li class="nav-item">
-                            <a class="nav-link active" href="#essays">essays</a>
+                            <span class="glow-emoji">
+                            <a class="nav-link active animate__animated bouncy-text" href="#essays">essays</a>
+                            </span>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#about">about me</a>
+                            <span class="glow-emoji">
+                            <a class="nav-link" href="#about">random thoughts</a>
+                            </span>
                         </li>
                         <li class="nav-item">
+                            <span class="glow-emoji">
                             <a class="nav-link" href="#life">life atm</a>
+                            </span>
                         </li>
                         <li class="nav-item">
+                            <span class="glow-emoji">
                             <a class="nav-link" href="#gallery">image gallery</a>
+                            </span>
                         </li>
                     </ul>
                 </div>
